# OpenShamrock

./: .gitignore  .gitmodules  .prettierignore  .prettierrc  404.html  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  build.gradle.kts  gradle.properties  index.html  package.json  pnpm-lock.yaml  search-pro.worker.js  settings.gradle.kts
.github/: FUNDING.yml
advanced/: index.html  voice.html
annotations/: build.gradle.kts
api/: account.html  contact.html  dispose.html  fav.html  file.html  group.html  guild.html  index.html  message.html  other.html  request-response.html  resources.html  shamrock.html  user.html
app/: build.gradle.kts  proguard-rules.pro
assets/: 404.html-47704f15.js  404.html-7d285a0d.js  404.html-f04ced3e.js  SearchResult-76df690b.js  SearchResult-c2e3c36f.js  account.html-50171750.js  account.html-90bd473f.js  account.html-b6a11f24.js  advanced.html-9f0a3c6c.js  advanced.html-c5e53050.js  advanced.html-cf16f849.js  advanced.html-d4b4d3a3.js  app-57500bea.js  app-e0095480.js  configuration.html-38062eb2.js  configuration.html-ba1a7bcd.js  configuration.html-c9de05dc.js  configuration.html-eb910716.js  contact.html-11496593.js  contact.html-3cff63b3.js  contact.html-955c8c7e.js  contact.html-d4744d54.js  dispose.html-102b9d52.js  dispose.html-53cbdb97.js  dispose.html-aa43dd9b.js  faq.html-0d7bbd15.js  (+99 more)
docs/: README.md  (+1 more)
xposed/src/main/cpp/: CMakeLists.txt  clover.cpp  jnihelper.h  lsposed.h  xposed.cpp
xposed/src/main/cpp/anti_detection/: anti_detection.cpp  anti_detection.h
xposed/src/main/cpp/helper/: jnihelper.cpp  jnihelper.h
(+2685 files in other folders)
